[tool.poetry]
name = "reflection"
version = "0.1.0"
description = ""
authors = ["Sonika <sonika.janagill@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.2.27"
grandalf = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
